Update and rename web-servicios.html to index.html

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
-                    <h3 class="text-xl font-bold mb-2 text-primary">Plataforma Web Full Stack (Flask + SQLite)</h3>
+                    <h3 class="text-xl font-bold mb-2 text-primary">Clasificación de la Potabilidad del Agua con Machine Learning</h3>
                     <p class="text-gray-700 mb-4">
-                        Desarrollo de una aplicación web de gestión de tareas. Demuestra mi capacidad para construir soluciones end-to-end.
+                        Desarrollo de un modelo de Machine Learning para la clasificación de la potabilidad del agua, abarcando análisis exploratorio de datos, preprocesamiento, formulación de hipótesis de modelado, optimización y evaluación detallada de un modelo.
                     </p>
                     <a href="https://andreapardogis.github.io/" target="_blank" class="text-highlight font-semibold hover:underline">Ver Proyecto</a>
                 </div>
@@ -145,7 +145,8 @@
                 Soy Andrea Pardo Gispert, una profesional con una visión dual en la ingeniería industrial y la ciencia de datos. Mi trayectoria me ha permitido fusionar la eficiencia operativa con el poder del análisis avanzado y la inteligencia artificial. Me apasiona identificar oportunidades de mejora, optimizar procesos y construir soluciones basadas en datos que generen un impacto real y medible. Mi objetivo es ayudarte a navegar el panorama de la Industria 4.0 y la transformación digital, convirtiendo tus desafíos en ventajas competitivas.
             </p>
             <div class="mt-8 flex justify-center items-center flex-wrap gap-x-6 gap-y-2 text-sm text-gray-600">
-                <span>📍 Canet de Mar, Barcelona</span>
+                <span>📍 Alella, Barcelona</span>
+                <span>🌍 Trabajo Remoto</span>
                 <span>🇪🇸 Castellano y Catalán (Nativos)</span>
                 <span>🇬🇧 Inglés (B1-B2)</span>
             </div>
