--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
                     <p class="text-gray-700 mb-4">
                         Desarrollo de un modelo de Machine Learning para la clasificación de la potabilidad del agua, abarcando análisis exploratorio de datos, preprocesamiento, formulación de hipótesis de modelado, optimización y evaluación detallada de un modelo.
                     </p>
-                    <a href="https://andreapardogis.github.io/" target="_blank" class="text-highlight font-semibold hover:underline">Ver Proyecto</a>
+                    <a href="https://github.com/AndreaPardoGis/Potabilidad-del-Agua-con-ML" target="_blank" class="text-highlight font-semibold hover:underline">Ver Proyecto</a>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md flex flex-col items-center text-center">
                     <h3 class="text-xl font-bold mb-2 text-primary">Predicción de Suicidio IA Aplicada a Salud Mental</h3>
                     <p class="text-gray-700 mb-4">
                         Modelo de clasificación predictivo con scikit-learn, incluyendo análisis exploratorio y visualización de datos.
                     </p>
-                    <a href="https://andreapardogis.github.io/" target="_blank" class="text-highlight font-semibold hover:underline">Ver Proyecto</a>
+                    <a href="https://github.com/AndreaPardoGis/PrediccionSuicidio" target="_blank" class="text-highlight font-semibold hover:underline">Ver Proyecto</a>
                 </div>
                 </div>
             <div class="text-center mt-12">
